--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 .interface {
     max-width: 1280px;
     margin: 0px auto;
+    padding: 0 4%;
 }
 
 /* Configurações do Header */
@@ -24,6 +25,9 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+
+    transition: .5s;
+    z-index: 1000;
 }
 
 header .interface {
@@ -37,6 +41,45 @@ header .interface {
 header .logo img {
     max-width: 40px;
 }
+
+/* Estilo do menu dinâmico */
+
+header .logo img.logo-preta {
+    display: none;
+}
+
+header.rolar {
+    background-color: white;
+    padding: 20px 0px;
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.151);
+}
+
+header.rolar .menu-desktop nav ul li a {
+    color: black;
+}
+
+header.rolar .btn-contato button {
+    color: black;
+    border: 1px solid black;
+}
+
+header.rolar .btn-contato button:hover {
+    background-color: black;
+    color: white;
+
+}
+
+header.rolar .logo .logo-branca {
+    display: none;
+}
+
+header.rolar .logo .logo-preta {
+    display: block;
+}
+
+/*..........................*/
+
+
 
 header .menu-desktop nav ul {
     list-style-type: none;
@@ -76,6 +119,99 @@ header .btn-contato button, .hero-site button, .hoteis button {
 header .btn-contato button:hover, .hero-site button:hover, .hoteis button:hover {
     background-color: white;
     color: black;
+}
+
+/* Estilo do menu mobile */
+
+header .menu-mobile {
+    width: 0;
+    height: 0;
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    overflow: hidden;
+    transition: .5s;
+}
+
+header .menu-mobile nav {
+    width: 100%;
+}
+
+header .menu-mobile nav ul {
+    list-style-type: none;
+}
+
+header .menu-mobile nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 30px;
+    padding: 20px 0px;
+
+    display: block;
+    transition: .5s;
+}
+
+header .menu-mobile nav a:hover {
+    background-color: white;
+    color: black;
+    box-shadow: 0 0 20px white;
+}
+
+header .menu-mobile.abrir {
+    width: 100%;
+    height: 100vh;
+}
+
+body.no-overflow {
+    overflow: hidden;
+}
+
+/* Estilo do botão Menu Mobile */
+
+header .btn-menu-mob {
+    display: none;
+    position: relative;
+    z-index: 9999999999;
+}
+
+header .btn-menu-mob div {
+    background-color: white;
+    height: 5px;
+    margin: 10px 0px;
+    transition: .2s;
+}
+
+header .btn-menu-mob .line-menumob-1 {
+    background-color: white;
+    width: 30px;
+}
+
+header .btn-menu-mob .line-menumob-2 {
+    background-color: white;
+    width: 20px;
+}
+
+header.rolar .btn-menu-mob div {
+    background-color: black;
+}
+
+header .btn-menu-mob .line-menumob-1.ativo1 {
+    transform: rotate(45deg) translate(33%);
+    background-color: white;
+    width: 30px;
+}
+
+header .btn-menu-mob .line-menumob-2.ativo2 {
+    transform: rotate(-45deg) translate(33%);
+    background-color: white;
+    width: 30px;
 }
 
 /* Estilo do Hero */
@@ -187,7 +323,7 @@ section.contato {
     align-items: center;
     justify-content: space-between;
 
-    width: 50%;
+    width: 70%;
     height: 60px;
     margin: 0 auto 20px auto;
     padding: 0 60px;
@@ -200,11 +336,11 @@ section.contato {
 }
 
 .contato .icons-contato button i {
-    font-size: 22px;
+    font-size: 20px;
 }
 
 .contato .icons-contato button:hover {
-    background-color: rgb(0, 0, 0);
+    background-color: black;
     color: white;
     border: none;
 }
